# gpg-chat

./: .build.sh  .gitignore  CMakeLists.txt  README.md  build.sh  server.c  shared_utils.c  shared_utils.h
client/: CMakeLists.txt
client/include/: client_actions.h  client_parser.h  socket.h
client/src/: action_connect.c  action_message.c  action_register.c  client.c  client_action_connect.c  client_actions.c  client_parser.c  socket.c
server/: CMakeLists.txt
server/include/: parser.h  server_actions.h  server_parser.h
server/src/: parser.c  server.c  server_action_connect.c  server_action_message.c  server_actions.c  server_parser.c
shared/: CMakeLists.txt
shared/include/: gpg.h  shared_utils.h  socket.h
shared/src/: gpg.c  shared_utils.c  socket.c
